# Autoxium

./: .gitignore  ENHANCEMENT_SUMMARY.md  FRAMELESS_WINDOW_ENHANCEMENTS.md  GIT_WORKFLOW.md  OVERLAY_FIX.md  README.md  pyproject.toml
scripts/: setup_dev.bat
src/autoxium/: __main__.py
src/autoxium/core/: action_worker.py  adb_wrapper.py  device_monitor.py  scrcpy_manager.py
src/autoxium/models/: device.py
src/autoxium/ui/: main_window.py  mirror_window.py  styles.py
src/autoxium/ui/components/: device_table.py  log_viewer.py  mirror_window.py  sidebar.py  sidebar_button.py  top_bar.py
src/autoxium/ui/layouts/: __init__.py  left_sidebar.py  top_bar.py
src/autoxium/ui/pages/: __init__.py  home_page.py  logs_page.py  profile_page.py  settings_page.py
src/autoxium/ui/style/: __init__.py  colors.py  theme_manager.py
src/autoxium/utils/: config.py  device_names.py  logger.py
tests/: test_adb.py
