[project]
name = "autoxium"
version = "0.1.0"
description = "A wrapper around external binaries like ADB and scrcpy for device management."
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "PyQt6",  # User mentioned PyQt/PySide/Flet, picking PyQt6 as a safe default for modern desktop apps
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
autoxium = "autoxium.__main__:main"
